优化：常量折叠，变量替换

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -34,7 +34,7 @@ syntax-c: $(YFILE)
 # 定义的一些伪目标
 .PHONY: clean test
 test:
-	./parser ../../Desktop/Test/lab3_more/C-2.cmm 
+	./parser ../../Desktop/myTest/lab3_more/E-1.3.cmm 
 
 clean:
 	rm -f parser lex.yy.c syntax.tab.c syntax.tab.h syntax.output
